--- a/auth/auth.csproj
+++ b/auth/auth.csproj
@@ -78,12 +78,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="OldForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OldForm1.Designer.cs">
+      <DependentUpon>OldForm1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="System\Management\ManagementObjectSearcher.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OldForm1.resx">
+      <DependentUpon>OldForm1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -114,11 +123,11 @@
     <Content Include="PanOS icon.ico" />
     <Content Include="PanOS Sun Valley %284%29.ico" />
     <None Include="Resources\phase3.exe" />
-    <None Include="Resources\backuptaskkill.exe" />
     <None Include="Resources\PanOSMain.exe" />
+    <None Include="Resources\UpdateScreen.exe" />
+    <None Include="Resources\backuptaskkill.exe" />
     <None Include="Resources\cmd.exe" />
     <None Include="Resources\BelfiOre Windows 10 Wallpaper.jpg" />
-    <None Include="Resources\UpdateScreen.exe" />
     <None Include="Resources\BlacklistedApp.exe" />
     <None Include="Resources\GoodbyeMBR.exe" />
     <None Include="Resources\boot.bin" />
